Alignment fix

--- a/HTML Learn/Tribute Page/buttonbarstyle.css
+++ b/HTML Learn/Tribute Page/buttonbarstyle.css
@@ -1,7 +1,6 @@
 .maindivision
 {
     background-color: azure;
-    width:25%;
 }
 .button
 {
